Ensure text remains visible during webfont load

--- a/dev/src/sass/_mixins.scss
+++ b/dev/src/sass/_mixins.scss
@@ -9,7 +9,7 @@
          url('../fonts/#{$file}.svg##{$file}') format('svg');
     font-weight: $weight;
     font-style: $style;
-    font-display: auto;
+    font-display: swap;
   }
 }
 
